--- a/index.html
+++ b/index.html
@@ -49,4 +49,5 @@ window.config = {
 	SUNRAYS_RESOLUTION: 196,
 	SUNRAYS_WEIGHT: 1.0,
 }
+	<img src="danai.jpg" alt="大乃护士" />
 </script><script src="js/main.js"></script><script src="js/background.js"></script><script src="https://cdn.jsdelivr.net/gh/Tomotoes/js/log.min.js"></script></main></body>
